z-index correction

--- a/src/Resources/public/contao-sticky-footer-backend-bundle.scss
+++ b/src/Resources/public/contao-sticky-footer-backend-bundle.scss
@@ -1,4 +1,4 @@
 body{ 
-    .tl_formbody_submit { position: sticky; bottom: 0; margin-top: -1px; }
+    .tl_formbody_submit { position: sticky; bottom: 0; margin-top: -1px; z-index: 1; }
     &.debug_mode .tl_formbody_submit { bottom: 30px; }
 }
